--- a/htdocs/public/style.css
+++ b/htdocs/public/style.css
@@ -1,3 +1,165 @@
 body {
     background-color: rgba(222, 184, 135, 0.3);
 }
+/*NAVIGÁCIŐS MENÜ*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: sans-serif;
+   
+  }
+  
+  .logo {
+    color: #e9e9e9;
+    font-size: 20px;
+  }
+  
+  .menuBar {
+    background-color: #2f2626;
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3%;
+    position: relative;
+  }
+  
+  .menuBar ul 
+  {
+    list-style: none;
+    display: flex;
+  }
+  
+  .menuBar ul li 
+  {
+    padding: 10px 20px;
+    position: relative;
+  }
+  
+  .menuBar ul li a 
+  {
+    font-size: 18px;
+    color: #e9e9e9;
+    text-decoration: none;
+    transition: all 0.3s;
+  }
+  
+  .menuBar ul li a:hover 
+  {
+    color: #c5aa6a;
+  }
+  
+  .fa {
+    float: right;
+    margin-left: 10px;
+    padding-top: 3px;
+  }
+  
+  /* legördülő menü */
+  .dropdownMenu 
+  {
+    display: none;
+  }
+  
+  .menuBar ul li:hover .dropdownMenu 
+  {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: #2f2626;
+  }
+  
+  .menuBar ul li:hover .dropdownMenu ul 
+  {
+    display: block;
+    margin: 10px;
+  }
+  
+  .menuBar ul li:hover .dropdownMenu ul li 
+  {
+    width: 150px;
+    padding: 10px;
+  }
+
+
+/*REGISZTRÁCIÓS OLDAL*/
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+.registerDiv
+{
+    background-color: rgba(48, 40, 40, 0.5);
+    width: 500px;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-shadow: 0px 10px 10px -2px #000000; 
+    box-shadow: 0px 10px 10px -2px #000000;
+    font-family: 'Roboto Slab', serif;
+}
+.registerDiv .registerForm
+{
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    margin-top: 5%;
+    padding-top: 50px;
+    color: #F0F0F0;
+}
+.registerDiv .registerForm td    
+{
+    text-align: center;
+}
+.registerDiv .registerForm input
+{
+    width: 350px;
+    height: 30px;
+    font-size: 16px;
+    margin: 10px 0px 10px 0px;
+    background-color: transparent;
+    border: none;
+    text-indent: 10px;
+    border-bottom: 3px solid #a7a7a7;
+    
+    font-weight: 700;
+    color:#dbdbdb;
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -ms-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+    letter-spacing: 1.5px;
+}
+.registerDiv .registerForm input:focus
+{
+    border-bottom: 3px solid #32cd32;
+    outline: 0
+}
+input:placeholder-shown
+{
+    border-bottom: 3px solid #32cd32;
+    outline: 0
+}
+.registerDiv .registerForm input::placeholder
+{
+    color:#b4b4b4;
+}
+.registerDiv .registerForm button
+{
+    margin-top: 20px;
+    width: 130px;
+    height: 35px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: 900;
+}
+.registerDiv .registerForm .loginText span
+{
+    color: rgb(252, 150, 167);
+}
