--- a/htdocs/public/style.css
+++ b/htdocs/public/style.css
@@ -92,7 +92,7 @@ body {
 /*REGISZTRÁCIÓS OLDAL*/
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
-.registerDiv
+.oDiv
 {
     background-color: rgba(48, 40, 40, 0.5);
     width: 500px;
@@ -103,7 +103,7 @@ body {
     box-shadow: 0px 10px 10px -2px #000000;
     font-family: 'Roboto Slab', serif;
 }
-.registerDiv .registerForm
+.oDiv .oForm
 {
     margin-left: auto;
     margin-right: auto;
@@ -112,11 +112,11 @@ body {
     padding-top: 50px;
     color: #F0F0F0;
 }
-.registerDiv .registerForm td    
+.oDiv .oForm td    
 {
     text-align: center;
 }
-.registerDiv .registerForm input
+.oDiv .oForm input
 {
     width: 350px;
     height: 30px;
@@ -136,7 +136,7 @@ body {
     transition: all .3s ease-out;
     letter-spacing: 1.5px;
 }
-.registerDiv .registerForm input:focus
+.oDiv .oForm input:focus
 {
     border-bottom: 3px solid #32cd32;
     outline: 0
@@ -146,11 +146,11 @@ input:placeholder-shown
     border-bottom: 3px solid #32cd32;
     outline: 0
 }
-.registerDiv .registerForm input::placeholder
+.oDiv .oForm input::placeholder
 {
     color:#b4b4b4;
 }
-.registerDiv .registerForm button
+.orDiv .oForm button
 {
     margin-top: 20px;
     width: 130px;
@@ -159,7 +159,7 @@ input:placeholder-shown
     text-transform: uppercase;
     font-weight: 900;
 }
-.registerDiv .registerForm .loginText span
+.oDiv .oForm .loginText span
 {
     color: rgb(252, 150, 167);
 }
