htdocs: removed unexpected r letter from code

--- a/htdocs/public/style.css
+++ b/htdocs/public/style.css
@@ -150,7 +150,7 @@ input:placeholder-shown
 {
     color:#b4b4b4;
 }
-.orDiv .oForm button
+.oDiv .oForm button
 {
     margin-top: 20px;
     width: 130px;
