--- a/htdocs/public/style.css
+++ b/htdocs/public/style.css
@@ -3,14 +3,15 @@ body {
 }
 /*NAVIGÁCIŐS MENÜ*/
 
-* {
-    margin: 0;
+* 
+{
+    margin: 0 ;
     padding: 0;
     box-sizing: border-box;
   }
   
   body {
-    font-family: sans-serif;
+    font-family: sans-serif !important;
    
   }
   
@@ -18,10 +19,20 @@ body {
     color: #e9e9e9;
     font-size: 20px;
   }
-  
+  .logo a
+  {
+    text-decoration: none !important;
+    color: #e9e9e9;
+    font-size: 20px;
+    transition: 0.2s ease all;
+  }
+  .logo a:hover
+  {
+    color: #c5aa6a;
+  }
   .menuBar {
     background-color: #2f2626;
-    height: 80px;
+    height: 80px ;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -33,7 +44,7 @@ body {
   .menuBar ul 
   {
     list-style: none;
-    display: flex;
+    display: flex ;
   }
   
   .menuBar ul li 
