--- a/htdocs/public/style.css
+++ b/htdocs/public/style.css
@@ -1,108 +1,48 @@
 body {
     background-color: rgba(222, 184, 135, 0.3);
+    font-family: sans-serif !important;
 }
-/*NAVIGÁCIŐS MENÜ*/
-
 * 
 {
     margin: 0 ;
     padding: 0;
     box-sizing: border-box;
   }
-  
-  body {
-    font-family: sans-serif !important;
-   
-  }
-  
-  .logo {
-    color: #e9e9e9;
-    font-size: 20px;
-  }
-  .logo a
-  {
-    text-decoration: none !important;
-    color: #e9e9e9;
-    font-size: 20px;
-    transition: 0.2s ease all;
-  }
-  .logo a:hover
-  {
-    color: #c5aa6a;
-  }
-  .menuBar {
-    background-color: #2f2626;
-    height: 80px ;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 3%;
-    position: relative;
-  }
-  
-  .menuBar ul 
-  {
-    list-style: none;
-    display: flex ;
-  }
-  
-  .menuBar ul li 
-  {
-    padding: 10px 20px;
-    position: relative;
-  }
-  
-  .menuBar ul li a 
-  {
-    font-size: 18px;
-    color: #e9e9e9;
-    text-decoration: none;
-    transition: all 0.3s;
-  }
-  
-  .menuBar ul li a:hover 
-  {
-    color: #c5aa6a;
-  }
-  
-  .fa {
-    float: right;
-    margin-left: 10px;
-    padding-top: 3px;
-  }
-  
-  /* legördülő menü */
-  .dropdownMenu 
-  {
-    display: none;
-  }
-  
-  .menuBar ul li:hover .dropdownMenu 
-  {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    background-color: #2f2626;
-  }
-  
-  .menuBar ul li:hover .dropdownMenu ul 
-  {
-    display: block;
-    margin: 10px;
-  }
-  
-  .menuBar ul li:hover .dropdownMenu ul li 
-  {
-    width: 150px;
-    padding: 10px;
-  }
+/*BEJELENTKEZŐ OLDAL*/ /*REGISZTRÁCIÓS OLDAL*/
+  .simple-container{
+    width:300px;
+    max-width:100%;
+    margin:50px auto;
+}
+.simple-container h2{
+    text-align:center;
+    font-size:20px;
+}
 
-
-/*REGISZTRÁCIÓS OLDAL*/
-
+.simple-container .btn-login{
+    background-color:#FF5964;
+    color:#fff;
+}
+a{
+    color:#fff;
+}
+.simple-container .btn-register{
+  background-color:#FF5964;
+  color:#fff;
+}
+.simple-container a
+{
+  text-decoration: none;
+  color: #c5aa6a;
+  transition: .3s ease all;
+  
+}
+.simple-container span:hover
+{
+  color: #e6c67b;
+}
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+
 .oDiv
 {
     background-color: rgba(48, 40, 40, 0.5);
